# muker-CLI

./: .env.example  .gitignore  INSTALL.md  README.md  SPOTIFY_SETUP.md  USAGE.md  check_terminal.py  debug_genius.py  pyproject.toml  requirements.txt  test_import.py  test_official.py  test_simple.py  test_textual.py
data/: cache.db
muker/: __init__.py  __main__.py  app.py
muker/core/: __init__.py  database.py  library.py  player.py  playlist.py  visualizer.py
muker/models/: __init__.py  playlist_model.py  track.py
muker/services/: genius_service.py  spotify_service.py
muker/ui/: __init__.py  styles.tcss
muker/ui/screens/: __init__.py  annotation_popup.py  main_screen.py
muker/ui/widgets/: __init__.py  library_browser.py  lyrics_panel.py  player_controls.py  playlist_view.py  progress_bar.py  visualizer_widget.py
muker/utils/: __init__.py  audio_utils.py  config.py  file_scanner.py
tests/: __init__.py  test_playlist.py  test_track.py  test_visualizer.py
